# easy-as-pypi-appdirs

./: .coveragerc  .editorconfig  .gitignore  .ignore.example  .pyproject.project.tmpl  .readthedocs.yml  AUTHORS.rst  CODE-OF-CONDUCT.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: doblabs-dependencies.yml
.github/workflows/: checks.yaml  coverage.yaml  release-smoke-test.yml  run-release-cascade.yml  spread-updates.yml  sprout-updates.yml  update-deps.yml  update-merged.yml  update-org-deps.yml
.pyproject-prerelease/: pyproject.toml
TBD/: setup.cfg--no-metadata--no-options
TBD-config/: MANIFEST.in
TBD-requirements/: docs.pip  release.pip
docs/: Makefile  conf.py  easy_as_pypi_appdirs.rst  index.rst  installation.rst  make.bat  modules.rst
docs/_build-gen/doctrees/: authors.doctree  code-of-conduct.doctree  contributing.doctree  easy_as_pypi_appdirs.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  license.doctree  modules.doctree
docs/_build-gen/html/: .buildinfo  authors.html  code-of-conduct.html  contributing.html  easy_as_pypi_appdirs.html  genindex.html  history.html  index.html  installation.html  license.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build-gen/html/_modules/: index.html
docs/_build-gen/html/_modules/easy_as_pypi_appdirs/: app_dirs.html  app_dirs_with_mkdir.html  exists_or_mkdirs.html  expand_and_mkdirs.html  singleton.html
docs/_build-gen/html/_sources/: index.rst.txt  license.rst.txt  modules.rst.txt
docs/_build-gen/html/_static/: documentation_options.js
easy_as_pypi_appdirs/: __init__.py  app_dirs.py  exists_or_mkdirs.py  expand_and_mkdirs.py  singleton.py
easy_as_pypi_appdirs/tests/: appdirs_mock.py
easy_as_pypi_apppth/tests/: appdirs_mock.py
poetry-shell-lint/: pyproject.toml
requirements/: test.pip
src/easy_as_pypi_appdirs/: __init__.py  app_dirs_with_mkdir.py  exists_or_mkdirs.py  expand_and_mkdirs.py
tests/: __init__.py  conftest.py  test_app_dirs_with_mkdir.py  test_app_dirs_with_mkdir_singleton.py  test_exists_or_mkdirs.py  test_expand_and_mkdirs.py  test_singleton.py  test_tests_appdirs_mock.py
